# practice

./: Dijkstra  EilerFunction.cpp  GaussDeterminant.cpp  Lca.cpp  README.md  fibonachi.cpp  transposition.h
cpp/algos/: find_if.h  lrucache.h  permutations.cpp  reduce.h
cpp/classes/: any.h  buffered_channel.h  smart_ptr.h  unbuffered_channel.h  unique_ptr.cpp  vector.cpp
cpp/classes/memlist/: CMakeLists.txt  benchmarks.cpp  memory_list.hpp  tests_memory_list.cpp
cpp/concurrency/: buffered_channel.h  concurrent_unordered_map.h  matrix_mul_openmp.cpp  rw_lock.h  spinlock.h
cpp/meta/: compile_fibonacci.cpp  turtle.cpp
data_structures/: advance_queue.cpp  backup_dsu.cpp  bidirectional_list.cpp  binary_heap.h  binary_search_tree.cpp  counting_bf.h  cow_vector.h  deque.h  dsu.cpp  explicit_treap.cpp  fenwick_tree.cpp  implicit_treap.cpp  intrusive_list.h  lazy_seg_tree.cpp  segment_tree.cpp
data_structures/bloom_filters/: basic_bf.h  counting_bf.h
golang/: format.go  lrucache.go  reverse.go
graphs/: Lca.cpp  dsu.txt  msts.cpp  parallel_kruskal.cpp  trees_isomorphic.cpp
linux_programming/: README.md  cat.c  pipeline.c
mapreduce/inplace/: CMakeLists.txt  README.md  map.cpp  mapScript  mapreduce.cpp  mapreduceScript  reduce.cpp
mapreduce/inplace/scripts/: mapScript  mapreduceScript  reduceScript
math/: Danilevskiy&Newton.h  LU.h  PowerMethod.h
other/: hex_string_from_number.cpp  rational_class.cpp
uncategorized/: knut_morris_pratt.py  rabin_karp.py
windows_programming/: README.md  conditional_variable.h  critical_section.h  pipeline.cpp
(+65 files in other folders)
